# hyh

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cliff.toml  demo.sh  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml  release.yml  zizmor.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/plans/: 2025-01-01-multi-agent-orchestration.md  2025-01-01-taskpacket-implementation.md  2025-01-20-performance-fixes.md  2025-12-13-harness-architecture.md  2025-12-14-council-amendments-abc.md  2025-12-14-council-amendments.md  2025-12-14-harness-v2-council-revision.md  2025-12-14-harness-v2-pull-engine.md  2025-12-14-integration-test-coverage.md  2025-12-14-lease-renewal-bug.md  2025-12-14-markdown-plan-template.md  2025-12-14-plan-template-command.md  2025-12-14-strangler-fig-plan-import.md  2025-12-14-test-coverage-95.md  2025-12-19-architecture-audit-improvements.md  2025-12-19-dev-workflow-harness-migration.md  2025-12-19-fix-template-parsing.md  2025-12-19-harness-status-design.md  2025-12-19-harness-status-impl.md  2025-12-20-markdown-plan-parser.md  2025-12-20-multi-project-isolation-design.md  2025-12-20-multi-project-isolation.md  2025-12-20-performance-optimizations.md  2025-12-20-performance-reliability-fixes.md  2025-12-21-performance-testing-standards.md  2025-12-22-daemon-type-safety.md  2025-12-22-migrate-mypy-to-ty.md  2025-12-22-pydantic-to-msgspec-migration.md  2025-12-22-versioning-design.md  2025-12-22-versioning-implementation.md  2025-12-23-accelerated-testing-design.md  2025-12-23-accelerated-testing-impl.md  2025-12-23-demo-command.md  2025-12-23-github-workflow-improvements.md  2025-12-23-github-workflows-audit-design.md  2025-12-23-hyh-demo-command-impl.md  2025-12-23-hyh-demo-command.md  2025-12-23-learnings-from-uv.md  2025-12-23-msgspec-immutability-audit.md  2025-12-23-pypi-compliance.md  (+4 more)
scripts/: release.sh  strip_docstrings.py
src/harness/: __init__.py  __main__.py  acp.py  client.py  daemon.py  git.py  plan.py  registry.py  runtime.py  state.py  trajectory.py
src/hyh/: __init__.py  client.py  daemon.py  demo.py  plan.py  state.py  worktree.py
tests/: __init__.py
tests/harness/: conftest.py  test_acp.py  test_acp_robustness.py  test_boundary_audit.py  test_client.py  test_client_edge_cases.py  test_complexity.py  test_concurrency_audit.py  test_daemon.py  test_freethreading.py  test_git.py  test_index_consistency.py  test_integration.py  test_integration_council.py  test_lock_hierarchy.py  test_memory.py  test_performance.py  test_persistence_audit.py  test_plan.py  test_plan_edge_cases.py  test_registry.py  test_registry_stress.py  test_runtime.py  test_runtime_edge_cases.py  test_security_audit.py  test_shutdown.py  test_state.py  test_state_coverage.py  test_state_machine.py  test_trajectory.py  test_trajectory_boundaries.py  test_version.py
tests/hyh/: conftest.py  test_client_edge_cases.py  test_complexity.py  test_daemon.py  test_demo.py  test_freethreading.py  test_index_consistency.py  test_integration.py  test_integration_council.py  test_plan.py  test_registry_stress.py  test_runtime.py  test_shutdown.py  test_state_coverage.py  test_state_machine.py  (+5 more)
(+1 files in other folders)
