[project]
name = "harness"
version = "0.1.0"
description = "Thread-safe state management daemon for dev workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
harness = "harness.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
