[project]
name = "harness"
version = "2.0.0"
description = "Autonomous Research Kernel with Thread-Safe Pull Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

# Development dependencies use PEP 735 dependency-groups (not optional-dependencies)
# See: https://peps.python.org/pep-0735/
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "pyupgrade>=3.19",
    "pytest-cov>=7.0.0",
    "mypy>=1.0",
    "big-o>=0.11.0",
    "hypothesis>=6.100.0",
    "time-machine>=2.10.0",
]

[project.scripts]
harness = "harness.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

# uv configuration - https://docs.astral.sh/uv/reference/settings/
[tool.uv]
# Explicitly mark as a package (builds and installs in editable mode)
package = true
# Default groups to sync (dev is already default, but explicit is better)
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--timeout=30"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade (Keep Python 3.13 modern)
    "B",   # flake8-bugbear (Catch common bugs)
    "SIM", # flake8-simplify
    "I",   # isort (Import hygiene)
    "N",   # pep8-naming
    "ANN", # flake8-annotations (Strict Typing - Guido's Rule)
    "S",   # flake8-bandit (Security - Justin's Rule)
    "DTZ", # flake8-datetimez (Timezone Safety - Sam's Rule)
    "PTH", # flake8-use-pathlib (Path Safety)
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific quality checks
]
ignore = [
    "S101",   # Use of assert (Allowed in general logic, critical for invariants)
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow assert, skip annotations, unused args, subprocess, /tmp paths, datetime without tz,
# unused loop vars, unpacked vars, implicit return (common test patterns)
"tests/*" = ["S101", "ANN", "ARG", "S603", "S607", "S108", "DTZ", "PTH", "RUF043", "B007", "RUF059", "RET503"]
# Client prints to stdout (The Interface) and spawns daemon subprocess
# S108: /tmp is standard Unix socket location per XDG
"src/harness/client.py" = ["T201", "S603", "S607", "S108"]
# Daemon executes commands through runtime - trusted subprocess execution
"src/harness/daemon.py" = ["T201", "S603"]
# Runtime is the subprocess execution layer - S603/S607 are intentional
"src/harness/runtime.py" = ["S603", "S607"]
# State uses **kwargs: Any for Pydantic model_copy (legitimate Any usage)
"src/harness/state.py" = ["ANN401"]


